Major website redesign: Add DRP Workshop branding, new pages (Welcome, About, Contact, Signup), reorganize file structure, update styling with cloudy backgrounds and improved navigation

--- a/login.html
+++ b/login.html
@@ -3,14 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweatsheet | Login</title>
-    <link rel="stylesheet" href="loginstyle.css">
+    <title>SWEATsheet | Login</title>
+    <link rel="stylesheet" href="css/loginstyle.css">
 </head>
 <body>
+    <header>
+        <div class="header-left">
+            <img id="header-logo" src="assets/images/DRPworkshop_logo3.png" alt="Sweatsheet Logo">
+            <div class="header-text">
+                <h1 id="header-title">DRP Workshop</h1>
+                <h2 id="header-subtitle">Brought to you by DRP Fitness and Health</h2>
+            </div>
+        </div>
+        <nav class="nav-links">
+          <a class="nav-link-dashboard" href="contactus.html">Contact Us</a>
+          <div class="separator"></div>
+          <a class="nav-link-welcome" href="welcome.html">Welcome</a>
+          <div class="separator"></div>
+          <a class="nav-link-about" href="about.html">About</a>
+          <div class="separator"></div>
+          <a class="nav-link-login" href="login.html">Login</a>
+        </nav> 
+    </header>
     <div class="wrapper">
         <form action="">
-            <img class="login-logo" src="Sweatsheet-logo2.png" alt="SweatSheet Logo">
-            <h1>SweatSheet Login</h1>
+            <img class="login-logo" src="assets/images/DRPworkshop_logo3.png" alt="SweatSheet Logo">
+            <h1>SWEATsheet Login</h1>
             <div class="input-box">
               <input type="text" placeholder="Username" required>
             <i class='bx bxs-user'></i>
@@ -25,7 +43,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Sign up</a></p>
+                <p>Don't have an account? <a href="signup.html">Sign up</a></p>
             </div>
         </form>
     </div>
