--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="src/assets/iconb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>DRP Labs</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
